refactor: code style cleanup and lint fixes (#62)
Backend:
- Rename single-letter variables to descriptive names (e->exception,
  s->strategy, c->existingConfig, m/cn->matcher, etc.) per code style
- Replace inline fully-qualified class names with imports
- Use virtual-thread executors instead of newCachedThreadPool
- Throw BizException (with cause) instead of bare RuntimeException
- Add @Slf4j logging in place of System.err.println

Frontend:
- Centralize auth storage key names in lib/auth-keys.ts and reuse in
  proxy.ts and lib/auth.ts to drop magic strings
- Replace hardcoded Chinese strings with i18n / English messages and
  add the corresponding locale entries (zh-CN, zh-TW, en-US, ja-JP)
- Misc cursor-pointer and UI component consistency fixes

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>